# cliplacer

./: Cargo.toml  README.md  cliplacer.sln
cliplacer/: Program.cs  cliplacer.csproj
cliplacer/Properties/: AssemblyInfo.cs
src/: main.rs
